<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color_blue"
    tools:context="MainActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="@dimen/width_100"
        android:layout_height="@dimen/height_100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_20"
        android:src="@drawable/parents_kids_2"
        android:contentDescription="@string/family_image"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:content=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_16"
                android:text="@string/parents"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_24" />

            <TextView
                android:id="@+id/parents_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_bottom_20"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_46" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/meal_timing_2"
                android:drawableStart="@drawable/meal_timing_2"
                android:onClick="addOneForParents"
                android:text="@string/meal_time_1"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/clean_kitchen_2"
                android:drawableStart="@drawable/clean_kitchen_2"
                android:onClick="addTwoForParents"
                android:text="@string/clean_up_2"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/read2"
                android:drawableStart="@drawable/read2"
                android:onClick="addTwoForParents2"
                android:text="@string/reading_2"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/work1"
                android:drawableStart="@drawable/work1"
                android:onClick="addThreeForParents"
                android:text="@string/work_time_3"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/story_bed_1"
                android:drawableStart="@drawable/story_bed_1"
                android:onClick="addThreeForParents3"
                android:text="@string/story_time_3"
                android:textColor="@color/white" />

        </LinearLayout>


        <View
            android:layout_width="@dimen/width_2"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_150"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:content=".MainActivity">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_16"
                android:text="@string/kids"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_24" />

            <TextView
                android:id="@+id/kids_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_bottom_20"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_46" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/meal_timing_2"
                android:drawableStart="@drawable/meal_timing_2"
                android:onClick="addOneForKids"
                android:text="@string/eat_your_meal_1"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/toys2"
                android:drawableStart="@drawable/toys2"
                android:onClick="addTwoForKids"
                android:text="@string/pick_up_toys_2"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/nap1"
                android:drawableStart="@drawable/nap1"
                android:onClick="addTwoForKids2"
                android:text="@string/nap_time_2"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/playtime3"
                android:drawableStart="@drawable/playtime3"
                android:onClick="addThreeForKids"
                android:text="@string/playtime_3"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8"
                android:layout_marginLeft="@dimen/margin_left_24"
                android:layout_marginStart="@dimen/margin_left_24"
                android:layout_marginRight="@dimen/margin_right_24"
                android:layout_marginEnd="@dimen/margin_right_24"
                android:drawableLeft="@drawable/story_bed_1"
                android:drawableStart="@drawable/story_bed_1"
                android:onClick="addThreeForKids3"
                android:text="@string/in_bed_by_9pm_3"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_32"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:layout_below="@id/linear"
        android:text="@string/new_day"
        android:textColor="@color/white" />

    </RelativeLayout>

</ScrollView>

